--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-  <p>beachfront media haxe demo</p>
+  <h3 class="app-title">beachfront media haxe demo</h3>
 
-  <div id="jsLog" style="margin-bottom:33px; width:400px;">js log:</div>
+  <div id="jsLog" style="margin-bottom:33px; width:400px;">-- info --</div>
 
   <div id="swfContainer">If you see this text the flash code didn't embed correctly.</div>
 
