added current date-time

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 </head>
 
 <body>
-  <h3 class="app-title">beachfront media haxe demo</h3>
+  <h3>
+    <div class="app-title">beachfront media haxe demo</div>
+    <div class="current-date-time"></div>
+  </h3>
 
   <div id="jsLog" style="margin-bottom:20px; width:400px;">-- info --</div>
 
