-added HeartBeat and HeartBeatSignal and rolled out to flash and js App instances

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
 
     <div id="jsContainer" style="width:50vw; background-color:#ccc; margin-left:10px; padding:10px;">
-      <div id="jsLog" style="margin-bottom:20px;">-- js log --</div>
+      <div class="current-date-time" style="float:right;"></div>
 
-      <div class="current-date-time"></div>
+      <div id="jsLog" style="margin-bottom:20px;">-- js log --</div>
     </div>
   </div>
 
