-testing polymer's observe-js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=10, chrome=1" />
 
   <script src="lib/node_modules/swfobject-npm/swfobject/src/swfobject.js"></script>
+  <script src="lib/node_modules/observe-js/src/observe.js"></script>
   <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
 
   <style>
@@ -34,7 +35,7 @@
     <div id="jsContainer" style="width:50vw; background-color:#ccc; margin-left:10px; padding:10px;">
       <div class="current-date-time" style="float:right;"></div>
 
-      <div id="jsLog" style="margin-bottom:20px;">-- js log --</div>
+      <div id="jsLog" style="margin-bottom:20px;">--- js log ---</div>
     </div>
   </div>
 
