--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     {
       display:none;
     }
+
+    .video-container
+    {
+      margin-left:10px;
+      padding:10px;
+      background-color:#999;
+    }
   </style>
 </head>
 
@@ -42,7 +49,7 @@
   <div style="display:flex; flex-flow:row; margin-bottom:10px">
     <canvas id="canvas" width="340" height="200"></canvas>
 
-    <div id="videoContainer" style="margin-left:10px"></div>
+    <div id="videoContainer" class="video-container"></div>
   </div>
 
   <div id="contentContainer" style="display:flex; flex-flow:row; height:2000px;/*vh;*/">
